Fix build with newer versions of clang https://bugs.webkit.org/show_bug.cgi?id=163908 rdar://problem/28852016

Reviewed by Tim Horton.

Use the macros that names the soft-linked functions in such a way that they won't conflict with actual functions.

* platform/ios/PlatformScreenIOS.mm:
(WebCore::screenIsMonochrome):
(WebCore::screenHasInvertedColors):
(WebCore::screenSize):
(WebCore::availableScreenSize):
(WebCore::screenScaleFactor):

Canonical link: https://commits.webkit.org/181635@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207774 268f45cc-cd09-0410-ab3c-d52691b4dbfc